--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <nav id="navbar">
             <ul>
                 <img src="assets/BH Game Supply.png" alt="BH Game Supply" border=0 class="logo">
-                <li><img src="../SSFAssignment/assets/Facebook.png" alt="Facebook" border="0" class="socialMedia"></li>
-                <li><img src="../SSFAssignment/assets/Instagram.png" alt="Instagram" border="0" class="socialMedia"></li>
-                <li><img src="../SSFAssignment/assets/Twitter.png" alt="Twitter" border="0" class="socialMedia"></li>
-                <li><img src="../SSFAssignment/assets/YouTube.png" alt="YouTube" border="0" class="socialMedia"></li>
-                <li><img src="../SSFAssignment/assets/shopping-cart.png" alt="Shopping Cart" border="0" class="shoppingCart"></li>
+                <li><img src="assets/Facebook.png" alt="Facebook" border="0" class="socialMedia"></li>
+                <li><img src="SSFAssignment/assets/Instagram.png" alt="Instagram" border="0" class="socialMedia"></li>
+                <li><img src="SSFAssignment/assets/Twitter.png" alt="Twitter" border="0" class="socialMedia"></li>
+                <li><img src="SSFAssignment/assets/YouTube.png" alt="YouTube" border="0" class="socialMedia"></li>
+                <li><img src="SSFAssignment/assets/shopping-cart.png" alt="Shopping Cart" border="0" class="shoppingCart"></li>
             </ul>
             <input type="text" placeholder="Search">
         </nav>
