--- a/index.html
+++ b/index.html
@@ -26,42 +26,42 @@
     <!--Main-->
     <div id="allConsoles">
         <div class="gameConsole" id="switch">
-            <div id="console1"><img src="../SSFAssignment/assets/Nintendo Switch.jpg" alt="Nintendo" style="width:556px; height:500px;">
+            <div id="console1"><img src="assets/Nintendo Switch.jpg" alt="Nintendo" style="width:556px; height:500px;">
             </div>
             <div>
-                <div class="game" id="switchGame"><img src="../SSFAssignment/assets/ZeldaBotW.jpeg" style="height:320px; width: 276px"></div>
-                <div class="game" id="switchGame"><img src="../SSFAssignment/assets/Luigis Mansion 3.jpg" style="height:320px; width: 276px"></div>
+                <div class="game" id="switchGame"><img src="assets/ZeldaBotW.jpeg" style="height:320px; width: 276px"></div>
+                <div class="game" id="switchGame"><img src="assets/Luigis Mansion 3.jpg" style="height:320px; width: 276px"></div>
             </div>
             <div>
-                <div class="game" id="switchGame"><img src="../SSFAssignment/assets/Splatoon2.jpg" style="height:320px; width: 276px"></div>
-                <div class="game" id="switchGame"><img src="../SSFAssignment/assets/Links Awakening.jpg" style="height:320px; width: 276px"></div>
+                <div class="game" id="switchGame"><img src="assets/Splatoon2.jpg" style="height:320px; width: 276px"></div>
+                <div class="game" id="switchGame"><img src="assets/Links Awakening.jpg" style="height:320px; width: 276px"></div>
             </div>
             <button id="seeMore1">See More Switch Games</button>
         </div>
 
         <div class="gameConsole" id="xbox">
-            <div id="console2"><img src="../SSFAssignment/assets/Xbox One X.jpg" alt="Xbox" style="width:556px;height:500px;"></img>
+            <div id="console2"><img src="assets/Xbox One X.jpg" alt="Xbox" style="width:556px;height:500px;"></img>
             </div>
             <div>
-                <div class="game" id="xboxGame"><img src="../SSFAssignment/assets/Titanfall2.jpg" style="height:320px; width: 276px"></div>
-                <div class="game" id="xboxGame"><img src="../SSFAssignment/assets/SoW.jpg" style="height:320px; width: 276px"></div>
+                <div class="game" id="xboxGame"><img src="assets/Titanfall2.jpg" style="height:320px; width: 276px"></div>
+                <div class="game" id="xboxGame"><img src="assets/SoW.jpg" style="height:320px; width: 276px"></div>
             </div>
             <div>
-                <div class="game" id="xboxGame"><img src="../SSFAssignment/assets/Crackdown3.jpg" style="height:320px; width: 276px"></div>
-                <div class="game" id="xboxGame"><img src="../SSFAssignment/assets/CoD.jpg" style="height:320px; width: 276px"></div>
+                <div class="game" id="xboxGame"><img src="assets/Crackdown3.jpg" style="height:320px; width: 276px"></div>
+                <div class="game" id="xboxGame"><img src="assets/CoD.jpg" style="height:320px; width: 276px"></div>
             </div>
             <button id="seeMore2">See More Xbox Games</button>
         </div>
 
         <div class="gameConsole" id="ps4">
-            <div id="console3"><img src="../SSFAssignment/assets/PS4 Pro.jpg" alt="PS4" style="width:556px;height:500px;"></img></div>
+            <div id="console3"><img src="assets/PS4 Pro.jpg" alt="PS4" style="width:556px;height:500px;"></img></div>
             <div>
-                <div class="game" id="ps4Game"><img src="../SSFAssignment/assets/MK11.png" style="height:320px; width: 276px"></div>
-                <div class="game" id="ps4Game"><img src="../SSFAssignment/assets/Dreams.jpg" style="height:320px; width: 276px"></div>
+                <div class="game" id="ps4Game"><img src="assets/MK11.png" style="height:320px; width: 276px"></div>
+                <div class="game" id="ps4Game"><img src="assets/Dreams.jpg" style="height:320px; width: 276px"></div>
             </div>
             <div>
-                <div class="game" id="ps4Game"><img src="../SSFAssignment/assets/ShadowOfTheColossus.jpg" style="height:320px; width: 276px"></div>
-                <div class="game" id="ps4Game"><img src="../SSFAssignment/assets/Predator.jpg" style="height:320px; width: 276px"></div>
+                <div class="game" id="ps4Game"><img src="assets/ShadowOfTheColossus.jpg" style="height:320px; width: 276px"></div>
+                <div class="game" id="ps4Game"><img src="assets/Predator.jpg" style="height:320px; width: 276px"></div>
             </div>
             <button id="seeMore3">See More PS4 Games</button>
         </div>
